@@ -3,7 +3,8 @@
 	* src/jlib.erl: short_jid/1 and short_bare_jid/1 now produce a short
 	JID from the user-provided JID parts. To obtain a short JID from the
 	STRINGPREP'd parts, use the new short_prepd_jid/1 and
-	short_prepd_bare_jid/1 functions.
+	short_prepd_bare_jid/1 functions. Remove commented-out code and use
+	proper variable names.
 
 	* src/acl.erl: Use the new short_prepd_jid/1 function from jlib.
 
